ultima version del proyecto

--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <meta name="keywords" content="fotografia exterior, fotografia en paisaje">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body style="background-color: rgb(123, 126, 126);" class="grid-container">
 
     <header>
             <nav>
@@ -23,7 +23,7 @@
         </nav>
         <div class="title">
             <h1>Gon<span>Studio</span></h1>
-            <h2>fotografia</h2>
+            <h2>Contactanos</h2>
         </div>
     </header>
 
@@ -50,6 +50,11 @@
                        <label for="msg">Mensaje:</label>
                        <div>
                            <textarea id="msg" name="user_message"></textarea>
+                        </div>
+                     </li>
+                     <li>
+                        <div>
+                            <input type="submit" class="btn btn-green" value="Enviar Datos">
                         </div>
                      </li>
                     </ul>
