--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="fotografia exterior, fotografia en paisaje">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body style="background-color: rgb(123, 126, 126);" class="grid-container">
 
     <header>
         <nav>
@@ -23,7 +23,7 @@
         </nav>
         <div class="title">
             <h1>Gon<span>Studio</span></h1>
-            <h2>fotografia</h2>
+            <h2>Fotografia</h2>
         </div>
     </header>
 
