--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <meta name="keywords" content="fotografia exterior, fotografia en paisaje">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body style="background-color: rgb(123, 126, 126);" class="grid-container">
     <header>
         <nav>
             <ul class="menu">
@@ -22,7 +22,7 @@
         </nav>
         <div class="title">
             <h1>Gon<span>Studio</span></h1>
-            <h2>fotografia</h2>
+            <h2>Quienes somos?</h2>
         </div>
     </header>
 
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div class="textNosotros">
-                <ul class="text1">
+                <ul class="adx">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta, blanditiis, dolore inventore error consequuntur maxime omnis temporibus nesciunt rerum similique deserunt modi illum eius incidunt dolor iusto libero itaque.
                 </ul>
                 <ul class="text2">
